force-app/main/default/objects/Pilot__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(ISBLANK(TEXT(Experience__c)), &quot;&quot;,
    IF(TEXT(Experience__c) = &quot;Less than 1 year&quot;, &quot;Junior&quot;,
        IF(TEXT(Experience__c) = &quot;2-5 years&quot;, &quot;Senior&quot;,
            IF(TEXT(Experience__c) = &quot;More than 5 years&quot;, &quot;Super Senior&quot;, &quot;&quot;)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>