force-app/main/default/objects/Pilot__c/validationRules/Age_Must_Be_Greater_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Must_Be_Greater_than_18</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorMessage>Age Must Be Greater than 18</errorMessage>
</ValidationRule>